<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_apps">My Nanodegree Apps!</string>
    <string name="poular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="make_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
    <string name="project_start_toast_msg">This button will launch my %1$s app!</string>

</resources>
