<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.nanodegree.udacity.android.myappportfolio.ProjectsLauncherFragment">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/my_apps"
            android:textAppearance="?android:textAppearanceLarge"/>

        <Button
            android:id="@+id/popular_movies"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/title_text"
            android:layout_alignStart="@+id/title_text"
            android:layout_below="@+id/title_text"
            android:text="@string/poular_movies"/>

        <Button
            android:id="@+id/stock_hawk"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/title_text"
            android:layout_alignStart="@+id/title_text"
            android:layout_below="@+id/popular_movies"
            android:text="@string/stock_hawk"/>

        <Button
            android:id="@+id/build_it_bigger"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/title_text"
            android:layout_alignStart="@+id/title_text"
            android:layout_below="@+id/stock_hawk"
            android:text="@string/build_it_bigger"/>

        <Button
            android:id="@+id/make_material"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/title_text"
            android:layout_alignStart="@+id/title_text"
            android:layout_below="@+id/build_it_bigger"
            android:text="@string/make_material"/>

        <Button
            android:id="@+id/go_ubiquitous"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/title_text"
            android:layout_alignStart="@+id/title_text"
            android:layout_below="@+id/make_material"
            android:text="@string/go_ubiquitous"/>

        <Button
            android:id="@+id/capstone"
            style="@style/buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/title_text"
            android:layout_alignStart="@+id/title_text"
            android:layout_below="@+id/go_ubiquitous"
            android:text="@string/capstone"/>

    </RelativeLayout>


</ScrollView>
